syntax = "proto3";
package osmosis.authenticator;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "osmosis/authenticator/params.proto";
import "osmosis/authenticator/models.proto";

option go_package = "github.com/osmosis-labs/osmosis/v20/x/authenticator/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/osmosis/authenticator/params";
  }

  rpc GetAuthenticators(GetAuthenticatorsRequest)
      returns (GetAuthenticatorsResponse) {
    option (google.api.http).get =
        "/osmosis/authenticator/authenticators/{account}";
  }

  rpc GetSpendLimitsForAccount(GetSpendLimitsForAccountRequest)
      returns (GetSpendLimitsForAccountResponse) {
    option (google.api.http).get =
        "/osmosis/authenticator/spend_limits/{account}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// GetAuthenticatorsRequest defines the Msg/GetAuthenticators request type.
message GetAuthenticatorsRequest { string account = 1; }

// GetAuthenticatorsResponse defines the Msg/GetAuthenticators response type.
message GetAuthenticatorsResponse {
  repeated AccountAuthenticator account_authenticators = 1;
}

/// Spend Limit queries
message SpendLimit {
  string account = 1;
  uint64 limit = 2;
  string quoteDenom = 3;
  string period = 4;
  uint64 used = 5;
  uint64 id = 6;
}

// GetSpendLimitsForAccount returns the spend limits for an account
message GetSpendLimitsForAccountRequest { string account = 1; }

message GetSpendLimitsForAccountResponse {
  repeated SpendLimit spend_limits = 1;
}
